Initial set of changes to support jck9
Signed-off-by: Simon Rushton <rushton@uk.ibm.com>